module(name = "quant-engine")

###############################################################################
# Bazel Dependencies
# https://registry.bazel.build/
###############################################################################
bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_apko", version = "1.4.0")
bazel_dep(name = "rules_multirun", version = "0.10.0")
bazel_dep(name = "rules_oci", version = "2.2.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_python", version = "1.1.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_rust", version = "0.57.1")
bazel_dep(name = "rules_rust_prost", version = "0.57.1")
bazel_dep(name = "rules_shell", version = "0.3.0")

# Toolchains
bazel_dep(name = "toolchains_protoc", version = "0.3.6", dev_dependency = True)
bazel_dep(name = "toolchains_llvm", version = "1.2.0", dev_dependency = True)
bazel_dep(name = "toolchains_musl", version = "0.1.20", dev_dependency = True)
bazel_dep(name = "toolchains_buildbuddy", dev_dependency = True)
git_override(
    module_name = "toolchains_buildbuddy",
    commit = "3d86f2afb5a986ea13a3ab22b0be54dd9cb0e453",
    remote = "https://github.com/buildbuddy-io/buildbuddy-toolchain",
)

# https://github.com/brainhivenl/libpq
bazel_dep(name = "libpq", version = "0.0.1")
git_override(
    module_name = "libpq",
    commit = "84ce14a248e583146e76fe6899a004cb2310f75c",
    remote = "https://github.com/brainhivenl/libpq",
)

###############################################################################
# Apko Rules
# https://github.com/chainguard-dev/rules_apko
###############################################################################
# Translate apko.lock.json to @base_image//:contents
# https://edu.chainguard.dev/open-source/build-tools/apko/bazel-rules/
apk = use_extension("@rules_apko//apko:extensions.bzl", "apko")
apk.translate_lock(
    name = "base_image",
    lock = "//images/base_image:apko.lock.json",
)
use_repo(apk, "base_image")

###############################################################################
# BuildBuddy Rules
# https://github.com/chainguard-dev/rules_apko
###############################################################################
buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy", dev_dependency = True)
buildbuddy.platform(container_image = "docker://ghcr.io/marvin-hansen/rbe-custom/rbe:latest")
use_repo(buildbuddy, "buildbuddy_toolchain")

###############################################################################
# LLVM toolchain #
# https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
###############################################################################
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_versions = {
        "": "16.0.0",
        "darwin-aarch64": "18.1.8",
    },
    sha256 = {
        "darwin-aarch64": "41d8dea52d18c4e8b90c4fcd31965f9f297df9f40a38a33d60748dbe7f8330b8",
    },
    stdlib = {
        "linux-x86_64": "stdc++",
        "linux-aarch64": "stdc++",
    },
    urls = {
        "darwin-aarch64": ["https://github.com/MaterializeInc/toolchains/releases/download/clang-18.1.8-4/darwin_aarch64.tar.zst"],
    },
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

###############################################################################
# Rust toolchain
# https://github.com/bazelbuild/rules_rust/releases
###############################################################################
RUST_EDITION = "2021"  # NOTE: 2024 edition will be released with Rust 1.85.0

RUST_VERSION = "1.84.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    extra_target_triples = [
        "x86_64-unknown-linux-musl",
        "aarch64-unknown-linux-musl",
    ],
    versions = [RUST_VERSION],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Custom Prost toolchain
register_toolchains("@//build/prost_toolchain")

###############################################################################
# Python toolchain
# https://github.com/bazelbuild/rules_python
###############################################################################
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = False,
    ignore_root_user_error = True,
    python_version = "3.11",
)

###############################################################################
# Rust dependencies; see thirdparty/BUILD.bazel
